all logger should have the final keyword